# ollama-mcp-server

./: .env.example  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  DISTRIBUTION.md  INSTALL.md  PUBLISHING.md  README.md  Taskfile.yaml  claude_desktop_config.json  init-repo.sh  install.sh  package-lock.json  package.json  publish.sh  pyproject.toml  setup.sh  test.sh
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
config/: grafana-datasource.yaml  litellm.yaml  prometheus.hybrid.yaml  prometheus.yaml
config/grafana-dashboards/: litellm-ollama.json  ollama-stack.json  provider.yaml
config/grafana-dashboards/files/: ollama-stack.json
docker/: compose.hybrid-host.yaml  compose.yaml
homebrew/: ollama-mcp-server.rb
router/: __init__.py  classifier.py  server.py
scripts/: grafana_compose_snippet.txt  grafana_volumes_snippet.txt  ollama_metrics_exporter.py  orb_check_replacement.txt  orb_check_snippet.txt  orb_check_task.txt  router_models.py  router_tasks_snippet.txt  router_test.py  setup_cursor_config.py  sync_cursor_models.py  test_litellm.py
src/: client.ts  index.ts  types.ts
tests/: test_classifier.py  test_litellm_config.py  test_route_models.py  test_router_http.py
vscode-extension/: .vscodeignore  LICENSE  package-lock.json  package.json  tsconfig.json
vscode-extension/python/: ollama_client.py  requirements.txt
vscode-extension/src/: extension.ts
